# mimo-code-surgeon

./: LICENSE  pyproject.toml
docs/: architecture.md  github_upload_guide.md
examples/sample_repo/: README.md
examples/sample_repo/tests/: test_calculator.py
mimo-code-surgeon/: README.md  TOKEN_APPLICATION_DRAFT.md
mimo-code-surgeon/docs/: TOKEN_USAGE_MODEL.md  agent_flow.md
mimo-code-surgeon/examples/issues/: divide-zero.md
mimo-code-surgeon/prompts/: documentation_agent.md  test_agent.md
mimo-code-surgeon/runs/local-demo/: first_patch.diff  input_issue.md  manifest.json  repair_notes.md  repo_summary.md
mimo-code-surgeon/src/mimo_code_surgeon/: repo_scanner.py  test_runner.py  token_estimator.py
mimo-code-surgeon/src/mimo_code_surgeon/agents/: architecture.py  implementation.py  retrieval.py
prompts/: architecture_agent.md  implementation_agent.md  retrieval_agent.md  review_agent.md
runs/local-demo/: architecture.md  plan.md  pr_description.md  repair_patch.diff  retrieval_result.json  token_estimate.json
runs/local-demo/working_repo/src/: calculator.py
runs/local-demo/working_repo/tests/: test_calculator.py
src/mimo_code_surgeon/: cli.py  llm.py  models.py  patch_utils.py  workflow.py
src/mimo_code_surgeon/agents/: __init__.py  documentation.py  review.py
tests/: test_workflow.py
